fix visible chains in modal

--- a/src/components/Modals/ModalsChains/MGeneralChains/_mGeneralChains.scss
+++ b/src/components/Modals/ModalsChains/MGeneralChains/_mGeneralChains.scss
@@ -22,14 +22,18 @@
   }
 
   &__overflow {
-    @include flexbox(row, center, flex-start, nowrap);
-    gap: 24px;
+    @include flexbox(row, flex-start, flex-start, nowrap);
+    gap: 20px;
     margin-bottom: 24px;
     padding: 0;
     width: 100%;
     height: 364px;
     box-sizing: border-box;
     overflow-x: auto;
+
+    &.less-five {
+      gap: 24px;
+    }
   }
 
   &__block {
